--- a/src/css/global.css
+++ b/src/css/global.css
@@ -8,3 +8,17 @@
 .black-background {
   background-color: var(--black);
 }
+
+.invisible {
+  opacity: 0;
+  transition-duration: 0.3s;
+}
+
+.invisible > * {
+  opacity: 0;
+}
+
+.visible {
+  opacity: 1;
+  transition-duration: 0.3s;
+}
