--- a/src/components/small-header/small-header.css
+++ b/src/components/small-header/small-header.css
@@ -26,6 +26,7 @@
   padding-top: 60px;
   padding-left: 100px;
   padding-right: 40px;
+  padding-bottom: 100px;
   right: 7em;
   top: 7em;
 }
@@ -42,14 +43,6 @@
 
 .small-header__info > * {
   color: white;
-}
-
-.invisible {
-  display: none;
-}
-
-.visible {
-  display: initial;
 }
 
 /* Headers on dark mode */
