--- a/src/components/small-header/small-header.css
+++ b/src/components/small-header/small-header.css
@@ -19,7 +19,8 @@
 }
 
 .small-header__info {
-  position: absolute;
+  position: fixed;
+  z-index: 2;
   background-color: var(--black);
   width: 160px;
   height: 340px;
@@ -34,19 +35,14 @@
 .small-header__info > * {
   font-size: 0.8em;
   text-align: right;
+  color: var(--black);
 }
 
 .small-header__info__title {
   padding-bottom: 1em;
   text-transform: uppercase;
 }
-
-.small-header__info > * {
-  color: white;
-}
-
 /* Headers on dark mode */
-
 .small-header__title__on-dark {
   color: var(--white);
 }
@@ -61,4 +57,10 @@
 
 .small-header__info__content__on-dark {
   color: var(--black);
+}
+
+/* light mode */
+
+.small-header__info__content__on-light {
+  color: var(--white);
 }
