updated training and small header

--- a/src/components/small-header/small-header.css
+++ b/src/components/small-header/small-header.css
@@ -64,3 +64,7 @@
 .small-header__info__content__on-light {
   color: var(--white);
 }
+
+.small-header__info__title__on-light {
+  color: var(--white);
+}
