--- a/src/css/type.css
+++ b/src/css/type.css
@@ -38,6 +38,10 @@ p {
   font-weight: 800;
 }
 
+.red {
+  color: var(--red);
+}
+
 .text-link__italics {
   color: var(--black);
   cursor: pointer;
