--- a/src/components/content-chit-chat/content-chit-chat.css
+++ b/src/components/content-chit-chat/content-chit-chat.css
@@ -1,41 +1,21 @@
-.ursonate-cotent__hero-text {
-  transform: translate(0, -3em);
-  width: 100em;
-}
-.ursonate-cotent__hero-text > p {
-  font-family: "Playfair Display", serif;
-  line-height: 130%;
-  font-size: 6.5em;
+.content-chit-chat__text {
+  width: 41em;
+  margin-top: 25em;
+  margin-left: 6em;
 }
 
-.ursonate-content__poem {
-  width: 100;
-  padding-top: 30em;
-  padding-bottom: 30em;
-  background-color: var(--black);
-  transform: translateY(-6em);
+.content-chit-chat__text p {
+  font-family: IBM Plex Mono;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.8em;
+  color: var(--red);
 }
 
-.ursonate-content__poem__text {
-  color: var(--white);
-  width: 40%;
-  margin: auto;
-}
-
-.ursonate-content__poem__text > p {
-  color: var(--white);
-  font-family: "Playfair Display", serif;
-  line-height: 150%;
-  font-size: 1.4em;
-}
-
-.ursonate-content__ending-text {
-  transform: translate(0, -11em);
-  width: 1000em;
-}
-
-.ursonate-content__ending-text > p {
-  font-family: "Playfair Display", serif;
-  line-height: 130%;
-  font-size: 6.5em;
+.content-chit-chat__img {
+  position: absolute;
+  width: 95vw;
+  top: 67em;
+  left: 2vw;
+  z-index: -1;
 }
