--- a/src/components/content-about/content-about.css
+++ b/src/components/content-about/content-about.css
@@ -1,7 +1,7 @@
 .content-about {
   width: 28.8em;
-  margin-top: 16em;
-  margin-left: 19em;
+  margin-top: 16vw;
+  margin-left: 19vw;
 }
 
 .content-about * {
