--- a/src/components/content-device/content-device.css
+++ b/src/components/content-device/content-device.css
@@ -24,7 +24,7 @@
 
 .content-device__text {
   position: relative;
-  height: 200vw;
+  height: 400vw;
 }
 
 /*--------------------- 
@@ -66,6 +66,7 @@ fingernail
 .content-device__text__group__fingernail {
   top: 422px;
   left: 53vw;
+  z-index: 1;
 }
 
 .content-device__text__group__fingernail > p {
@@ -87,7 +88,7 @@ Snail
 }
 
 .content-device__text__group__snail > p {
-  font-family: "Bodoni 72", serif;
+  font-family: "Playfair Display", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 4.5vw;
@@ -172,13 +173,172 @@ Data
 .content-device__text__group__data {
   top: 1857px;
   left: 2vw;
-  width: 200vw;
 }
 
 .content-device__text__group__data > p {
-  font-family: "Bodoni 72", serif;
+  font-family: "Playfair Display", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 72px;
   line-height: 87px;
+}
+
+/*--------------------- 
+Naked
+----------------------*/
+
+.content-device__text__group__naked {
+  top: 2332px;
+  left: 58vw;
+  z-index: 1;
+}
+
+.content-device__text__group__naked > p {
+  font-family: "Playfair Display", serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 46px;
+}
+
+/*--------------------- 
+Creator
+----------------------*/
+
+.content-device__text__group__creator {
+  top: 2508px;
+  left: 0vw;
+}
+
+.content-device__text__group__creator > p {
+  font-family: "Playfair Display", serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 60px;
+  line-height: 130%;
+}
+
+/*--------------------- 
+Reboot
+----------------------*/
+
+.content-device__text__group__reboot {
+  top: 2728px;
+  left: 22vw;
+}
+
+.content-device__text__group__reboot > p {
+  font-family: "IBM Plex Mono", monospace;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 130%;
+}
+
+/*--------------------- 
+Porn
+----------------------*/
+
+.content-device__text__group__porn {
+  top: 2665px;
+  left: 39vw;
+  background-color: var(--black);
+  padding: 36px;
+  z-index: 2;
+}
+
+.content-device__text__group__porn > p {
+  color: var(--white);
+  font-family: "IBM Plex Mono", monospace;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+/*--------------------- 
+Perspective
+----------------------*/
+
+.content-device__text__group__perspective {
+  top: 2813px;
+  left: 1vw;
+}
+
+.content-device__text__group__perspective > p {
+  font-family: "IBM Plex Mono", monospace;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+}
+
+/*--------------------- 
+Creepy
+----------------------*/
+
+.content-device__text__group__creepy {
+  top: 2931px;
+  left: 58vw;
+}
+
+.content-device__text__group__creepy > p {
+  font-family: "Playfair Display", serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 60px;
+}
+
+/*--------------------- 
+Cat
+----------------------*/
+
+.content-device__text__group__cat {
+  top: 3135px;
+  left: 27vw;
+}
+
+.content-device__text__group__cat > p {
+  font-family: "IBM Plex Mono", monospace;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 52px;
+}
+
+/*--------------------- 
+Fart
+----------------------*/
+
+.content-device__text__group__fart {
+  top: 3591px;
+  left: -2vw;
+  width: 300vw;
+}
+
+.content-device__text__group__fart > p {
+  font-family: "Playfair Display", serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 100px;
+  line-height: 120%;
+}
+
+/*--------------------- 
+bp
+----------------------*/
+
+.content-device__text__group__bp {
+  top: 3750px;
+  left: 4vw;
+  width: 300vw;
+}
+
+.content-device__text__group__bp > p {
+  font-family: "Playfair Display", serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 43px;
 }
